--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,73 +4,121 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorBackground">
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="150dp"
-        android:background="@color/colorOrange">
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center"
-            android:src="@drawable/sign_logo"/>
-    </FrameLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:text="@string/prompt_email"
-            android:textColor="@color/colorGrey"
-            android:textSize="14sp"/>
-        <AutoCompleteTextView
-            android:id="@+id/rign_up_email"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="fill_parent"
-            android:layout_height="36dp"
-            android:background="@drawable/text_shape"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/prompt_password"
-            android:textColor="@color/colorGrey"
-            android:textSize="14sp"/>
-        <EditText
-            android:id="@+id/rign_up_passward"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="fill_parent"
-            android:layout_height="36dp"
-            android:background="@drawable/text_shape"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/prompt_comfirm_password"
-            android:textColor="@color/colorGrey"
-            android:textSize="14sp"/>
-        <EditText
-            android:id="@+id/rign_up_repassward"
-            android:layout_marginTop="10dp"
-            android:layout_width="fill_parent"
-            android:layout_height="36dp"
-            android:background="@drawable/text_shape"/>
-        <Button
-            android:id="@+id/rign_up_button"
-            android:layout_width="fill_parent"
-            android:layout_height="36dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/button_shape"
-            android:text="@string/action_sign_up"
-            android:textColor="@color/colorWhite"
-            android:textSize="16dp"/>
 
-    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progress_sign_up"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_gravity="center|center_horizontal|center_vertical"
+        android:visibility="gone"
+        />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scroll_sign_up">
+            <LinearLayout
+                android:id="@+id/sign_up_from"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/logo_container_height"
+                    android:background="@color/colorOrange">
+                    <ImageView
+                        android:layout_width="@dimen/logo_width"
+                        android:layout_height="@dimen/logo_height"
+                        android:layout_gravity="center"
+                        android:src="@drawable/sign_logo"/>
+                </FrameLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:layout_marginLeft="@dimen/layout_marginLeft"
+                    android:layout_marginRight="@dimen/layout_marginRight">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prompt_nickname"
+                        android:textColor="@color/colorGrey"
+                        android:layout_marginTop="@dimen/layout_marginTop_large"
+                        android:textSize="@dimen/text_size_nor"/>
+                    <EditText
+                        android:id="@+id/edt_nickname"
+                        android:layout_marginTop="@dimen/layout_marginTop_nor"
+                        android:inputType="textPersonName"
+                        android:layout_marginBottom="@dimen/layout_marginBottom_nor"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/layout_height"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:maxLength="20"
+                        android:background="@drawable/text_shape"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prompt_email"
+                        android:textColor="@color/colorGrey"
+                        android:textSize="@dimen/text_size_nor"/>
+                    <AutoCompleteTextView
+                        android:id="@+id/sign_up_email"
+                        android:layout_marginTop="@dimen/layout_marginTop_nor"
+                        android:layout_marginBottom="@dimen/layout_marginBottom_nor"
+                        android:inputType="textEmailAddress"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/layout_height"
+                        android:background="@drawable/text_shape"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prompt_password"
+                        android:textColor="@color/colorGrey"
+                        android:textSize="@dimen/text_size_nor"/>
+                    <EditText
+                        android:id="@+id/edt_sign_password"
+                        android:layout_marginTop="@dimen/layout_marginTop_nor"
+                        android:layout_marginBottom="@dimen/layout_marginBottom_nor"
+                        android:inputType="textPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/layout_height"
+                        android:background="@drawable/text_shape"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prompt_comfirm_password"
+                        android:textColor="@color/colorGrey"
+                        android:textSize="@dimen/text_size_nor" />
+                    <EditText
+                        android:id="@+id/edt_confirm_password"
+                        android:layout_marginTop="@dimen/layout_marginTop_nor"
+                        android:layout_width="match_parent"
+                        android:inputType="textPassword"
+                        android:layout_height="@dimen/layout_height"
+                        android:background="@drawable/text_shape"/>
+                    <Button
+                        android:id="@+id/btn_sign_up"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/layout_height"
+                        android:layout_marginTop="@dimen/layout_marginTop_mid"
+                        android:layout_marginBottom="@dimen/layout_marginBottom_mid"
+                        android:background="@drawable/button_shape"
+                        android:text="@string/action_sign_up"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size_mid"/>
+                    <Button
+                        android:id="@+id/btn_sign_in"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sign_in"
+                        android:textSize="@dimen/sign_text_size"
+                        android:textColor="@color/colorGrey"
+                        style="@style/Base.Widget.AppCompat.ActionButton.CloseMode"
+                        />
 
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
 
 </LinearLayout>
