--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
     <!--登陆、注册-->
     <dimen name="logo_container_height">150dp</dimen>
     <dimen name="logo_width" >60dp</dimen>
@@ -11,4 +12,16 @@
     <dimen name="sign_view_height">36dp</dimen>
     <dimen name="sign_text_size">14sp</dimen>
     <dimen name="sign_button_size">16sp</dimen>
+
+    <!-- 通用尺寸-->
+    <dimen name="layout_marginLeft">10dp</dimen>
+    <dimen name="layout_marginRight">10dp</dimen>
+    <dimen name="layout_marginTop_nor">10dp</dimen>
+    <dimen name="layout_marginTop_mid">16dp</dimen>
+    <dimen name="layout_marginTop_large">18dp</dimen>
+    <dimen name="layout_marginBottom_nor">10dp</dimen>
+    <dimen name="layout_marginBottom_mid">16dp</dimen>
+    <dimen name="text_size_nor">14sp</dimen>
+    <dimen name="text_size_mid">16sp</dimen>
+    <dimen name="layout_height">36dp</dimen>
 </resources>
